--- a/src/sections/Nav/Nav.css
+++ b/src/sections/Nav/Nav.css
@@ -15,6 +15,24 @@
   transition: color 0.3s ease;
 }
 
+.menu-toggle {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+}
+
+.menu-icon span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #555;
+  margin-bottom: 5px;
+  transition: background-color 0.3s ease;
+}
+
 .nav-links {
   list-style: none;
   display: flex;
@@ -41,24 +59,40 @@
   align-items: center;
 }
 
-.login-button,
-.signup-button {
-  background-color: #33CC33;
-  color: #fff;
-  border: none;
-  padding: 0.7rem 1.5rem;
-  border-radius: 4px;
-  font-size: 1.1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
 .nav-links li:hover a {
   background-color: #ff69b4;
 }
 
-.login-button:hover,
-.signup-button:hover {
-  color: #fff;
-  background-color: #2e8b57;
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #F2F2F2;
+    padding: 2rem;
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+  }
+
+  .menu-toggle:checked ~ .nav-links {
+    display: flex;
+  }
+
+  .menu-icon {
+    display: block;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-icon span {
+    background-color: #555;
+  }
+
+  .auth-buttons {
+    display: none;
+  }
 }
