--- a/src/sections/Pricing/Pricing.css
+++ b/src/sections/Pricing/Pricing.css
@@ -1,76 +1,56 @@
-.pricing-container {
-    padding: 3rem;
-    text-align: center;
-    height: 700px;
-    display: flex;
-    background-color: #F2F2F2;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .pricing-title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 2rem;
-  }
-  
-  .pricing-cards {
-    display: flex;
-    gap: 5rem;
-  }
-  
-  .pricing-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 350px;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-  }
-  
-  .pricing-card:hover {
-    transform: translateY(-5px);
-  }
-  
-  .pricing-plan {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .pricing-price {
-    font-size: 2rem;
-    color: #555;
-  }
-  
-  .pricing-features {
-    text-align: left;
-  }
-  
-  .pricing-features li {
-    margin-bottom: 0.5rem;
-  font-size: 1.1rem; 
-  }
-  
-  .pricing-button {
-    background-color: #33CC33;
-    color: #fff;
-    border: none;
-    padding: 1rem 2rem;
-    border-radius: 4px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: auto; 
-  }
-  
-  .pricing-button:hover {
-    background-color: #2e8b57;
-  }
-  
+.container-fluid.pricing-container {
+  padding: 3rem;
+  text-align: center;
+  height: auto;
+  display: flex;
+  background-color: #f2f2f2;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pricing-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 2rem;
+}
+
+.pricing-cards {
+  display: flex;
+  gap: 5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.pricing-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 350px;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  margin-bottom: 2rem;
+}
+
+.pricing-card:hover {
+  transform: translateY(-5px);
+}
+
+.pricing-plan {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.pricing-features {
+  text-align: left;
+}
+
+.pricing-features li {
+  margin-bottom: 0.5rem;
+  font-size: 1.1rem;
+}
