--- a/src/sections/Nav/Nav.css
+++ b/src/sections/Nav/Nav.css
@@ -2,13 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
-  background-color: #F2F2F2;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1.2rem;
 }
 
 .logo a {
-  font-size: 1.8rem;
+  font-size: 3rem;
   font-weight: bold;
   color: #333;
   text-decoration: none;
@@ -36,7 +34,7 @@
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 
 .nav-links li a {
@@ -63,11 +61,15 @@
   background-color: #ff69b4;
 }
 
-@media (max-width: 768px) {
+.remove-radius {
+  border-radius: 0 !important;
+}
+
+@media (max-width: 1000px) {
   .nav-links {
     display: none;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     background-color: #F2F2F2;
     padding: 2rem;
     position: absolute;
