--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,4 +1,3 @@
-
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -6,23 +5,38 @@
   justify-content: center;
   padding: 3rem;
   text-align: center;
-  background-image: url('../../images/nature.JPG');
-  background-size:cover;
+  background-image: url("../../images/nature.JPG");
+  background-size: cover;
   background-position: center;
-  height: 700px; /* Adjust the height as desired */
+  height: 800px;
 }
 
+.hero-title {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 1rem;
+}
 
-  
+.hero-description {
+  font-size: 1.5rem;
+  color: whitesmoke;
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+  .hero-container {
+    height: auto;
+    padding: 2rem;
+  }
+
   .hero-title {
-    font-size: 3rem;
-    font-weight: bold;
-    color: white;
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .hero-description {
+    font-size: 1.25rem;
     margin-bottom: 1rem;
   }
-  
-  .hero-description {
-    font-size: 1.5rem;
-    color: whitesmoke;
-    margin-bottom: 2rem;
-  }
+}
