--- a/src/sections/ContactUs/ContactUs.css
+++ b/src/sections/ContactUs/ContactUs.css
@@ -3,11 +3,10 @@
   justify-content: center;
   align-items: center;
   padding: 40px;
-  height: 700px;
 }
 
 .contact-image {
-  background-image: url('https://helpx.adobe.com/content/dam/help/en/photoshop/using/convert-color-image-black-white/jcr_content/main-pars/before_and_after/image-before/Landscape-Color.jpg');
+  background-image: url("https://helpx.adobe.com/content/dam/help/en/photoshop/using/convert-color-image-black-white/jcr_content/main-pars/before_and_after/image-before/Landscape-Color.jpg");
   background-size: cover;
   width: 300px;
   height: 300px;
@@ -43,16 +42,18 @@
   height: 100px;
 }
 
-.contact-details form button {
-  background-color: #4CAF50;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
+@media (max-width: 1000px) {
+  .contact-section {
+    flex-direction: column;
+    height: auto;
+  }
 
-.contact-details form button:hover {
-  background-color: #45a049;
+  .contact-image {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .contact-details {
+    max-width: none;
+  }
 }
