--- a/src/sections/Nav/Nav.css
+++ b/src/sections/Nav/Nav.css
@@ -70,7 +70,7 @@
     display: none;
     flex-direction: column;
     align-items: center;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
     padding: 2rem;
     position: absolute;
     top: 5rem;
