--- a/src/sections/Nav/Nav.css
+++ b/src/sections/Nav/Nav.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.2rem;
+  background-color: #f2f2f2;
 }
 
 .logo a {
@@ -32,33 +33,8 @@
 }
 
 .nav-links {
-  list-style: none;
   display: flex;
   gap: 3rem;
-}
-
-.nav-links li a {
-  color: #555;
-  text-decoration: none;
-  transition: color 0.3s ease;
-  font-size: 1.2rem;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-}
-
-.nav-links li a:hover {
-  color: #fff;
-  background-color: #ff69b4;
-}
-
-.auth-buttons {
-  display: flex;
-  gap: 1.5rem;
-  align-items: center;
-}
-
-.nav-links li:hover a {
-  background-color: #ff69b4;
 }
 
 .remove-radius {
