--- a/src/sections/ContactUs/ContactUs.css
+++ b/src/sections/ContactUs/ContactUs.css
@@ -6,12 +6,12 @@
 }
 
 .contact-image {
-  background-image: url("https://helpx.adobe.com/content/dam/help/en/photoshop/using/convert-color-image-black-white/jcr_content/main-pars/before_and_after/image-before/Landscape-Color.jpg");
+  background-image: url("../../images/Contact_Us.png");
   background-size: cover;
   width: 300px;
   height: 300px;
-  border-radius: 50%;
-  margin-right: 40px;
+  border-radius: 25%;
+  margin-right: 100px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
