--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,27 +1,30 @@
 .hero-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 3rem;
-  text-align: center;
-  background-image: url("../../images/nature.JPG");
-  background-size: cover;
-  background-position: center;
+  background: url('../../images/hero_img.png') center / cover;
+  margin-top: 50px;
   height: 800px;
 }
 
 .hero-title {
+  padding-left: 120px;
   font-size: 3rem;
   font-weight: bold;
   color: white;
-  margin-bottom: 1rem;
 }
 
 .hero-description {
-  font-size: 1.5rem;
-  color: whitesmoke;
+  margin-top: 50px;
+  padding-left: 120px;
+  font-size: 2.2rem;
+  color:white;
+  font-weight: bold;
   margin-bottom: 2rem;
+}
+
+.larger-button {
+  width: 600px;
+  margin-left: 120px;
+  margin-top: 130px;
+  font-size: 50px !important;
 }
 
 @media (max-width: 768px) {
