--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,45 +1,47 @@
 .hero-container {
-  background: url('../../images/hero_img.png') center / cover;
-  margin-top: 50px;
-  height: 800px;
+  margin: 50px;
+  background: url("../../images/hero_img.png") center / cover;
+  padding: 2rem;
+  color: white;
 }
 
 .hero-title {
-  padding-left: 120px;
-  font-size: 3rem;
+  margin-top: 50px;
+  font-size: 2rem;
   font-weight: bold;
-  color: white;
+  margin-bottom: 1rem;
 }
 
 .hero-description {
   margin-top: 50px;
-  padding-left: 120px;
-  font-size: 2.2rem;
-  color:white;
-  font-weight: bold;
-  margin-bottom: 2rem;
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
 }
 
-.larger-button {
-  width: 600px;
-  margin-left: 120px;
-  margin-top: 130px;
-  font-size: 50px !important;
+.hero-button {
+  margin-top: 50px;
+  width: 100%;
+  max-width: 300px;
+  margin-top: 1rem;
+  font-size: 1.5rem !important;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .hero-container {
-    height: auto;
-    padding: 2rem;
-  }
+    height: 1000px;
 
-  .hero-title {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
-  }
+    .hero-title {
+      font-size: 3rem;
+    }
 
-  .hero-description {
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
+    .hero-description {
+      font-size: 2.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .hero-button {
+      width: 300px;
+      font-size: 2rem !important;
+    }
   }
 }
