--- a/src/components/QuestionInput/QuestionInput.css
+++ b/src/components/QuestionInput/QuestionInput.css
@@ -4,9 +4,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 35%;
-  height: 7%;
-  padding: 10px;
+  width: 40vw; 
+  max-width: 800px; 
+  padding: 0.5vw; 
   background-color: #f2f2f2;
   border-radius: 10px;
 }
@@ -14,15 +14,18 @@
 .input-container input {
   margin-right: 10px;
   background-color: #f2f2f2;
-  width: 100%;
-  height: 100%;
+  flex-grow: 1;
   border: none;
-  font-size: 20px;
+  font-size: 2vw; 
+}
+
+.input-container button {
+  flex-shrink: 0;
 }
 
 .input-container input::placeholder {
   color: gray;
-  font-size: 20px;
+  font-size: 2vw; 
 }
 
 .input-container input:focus {
@@ -31,4 +34,16 @@
 
 .input-container button {
   flex-shrink: 0;
+}
+
+@media (max-width: 600px) {
+  .input-container {
+    width: 90vw; 
+    padding: 0.5vw; 
+  }
+
+  .input-container input {
+    font-size: 2vw;  
+  }
+
 }
