support new design for the LP

--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,4 +1,4 @@
-.hero-container {
+/* .hero-container {
   margin: 50px;
   background: url("../../images/hero_img.png") center / cover;
   padding: 2rem;
@@ -44,4 +44,4 @@
       font-size: 2rem !important;
     }
   }
-}
+} */
