--- a/src/sections/Pricing/Pricing.css
+++ b/src/sections/Pricing/Pricing.css
@@ -3,7 +3,7 @@
   text-align: center;
   height: auto;
   display: flex;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   flex-direction: column;
   justify-content: center;
   align-items: center;
