--- a/src/sections/Features/Features.css
+++ b/src/sections/Features/Features.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 60px;
 }
 
 .features-title {
@@ -32,7 +33,8 @@
 }
 
 .feature:hover {
-  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px) scale(1.02);
 }
 
 .feature i {
