--- a/src/sections/ContactSection/ContactSection.css
+++ b/src/sections/ContactSection/ContactSection.css
@@ -22,9 +22,10 @@
   text-align: center;
 }
 
-.contact-headline {
-  font-size: 32px;
-  margin-bottom: 20px;
+.contact-headline { 
+  margin-bottom: 20px; 
+  font-size: 2.5rem; 
+  font-weight: bold; 
 }
 
 .contact-subheadline {
