--- a/src/sections/ContactSection/ContactSection.css
+++ b/src/sections/ContactSection/ContactSection.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* 100% of the viewport height */
+  min-height: 60vh;
   background-color: #f8f8f8;
 }
 
