--- a/src/sections/PricingSection/PricingSection.css
+++ b/src/sections/PricingSection/PricingSection.css
@@ -2,17 +2,13 @@
   padding: 60px;
   text-align: center;
   background-color: #f8f8f8;
+  min-height: 100vh;
 }
 
 .pricing-heading {
   margin-bottom: 20px;
   font-size: 2.5rem;
   font-weight: bold;
-}
-
-.pricing-subheading {
-  font-size: 18px;
-  margin-bottom: 40px;
 }
 
 .pricing-cards {
