--- a/src/sections/ContactSection/ContactSection.css
+++ b/src/sections/ContactSection/ContactSection.css
@@ -57,13 +57,14 @@
 }
 
 .contact-button {
-  background-color: #df73e7;
-  color: white;
-  border: none;
+  border: 2px dashed #28a745;
+  background-color: transparent;
+  color: black;
 }
 
 .contact-button:hover {
-  background-color: #c851ce;
+  background-color: #218838;
+  color: white;
 }
 
 /* Responsive Design */
