--- a/src/sections/Navbar/Navbar.css
+++ b/src/sections/Navbar/Navbar.css
@@ -1,9 +1,4 @@
-/* Apply a background color to the whole page */
-body {
-  background-color: #f4f4f4;
-}
 
-/* Style the navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -13,7 +8,6 @@ body {
   padding: 15px 20px;
 }
 
-/* Style the logo */
 .logo {
   cursor: pointer;
   padding-left: 20px;
@@ -21,25 +15,34 @@ body {
   font-weight: bold;
 }
 
-/* Style the navigation menu */
 .nav-list {
   list-style-type: none;
   display: flex;
 }
 
-/* Style each navigation item */
+
 .nav-item {
   margin-left: 20px;
 }
 
-/* Style each navigation link */
 .nav-item a {
-  color: white;
-  padding: 8px 16px;
+  padding: 8px;
+  margin-right: 10px;
+  margin-top: 10px;
   display: block;
+  width: 100px;
+  border-radius: 10px;   
+  border: 2px dashed #df73e7;
+  background-color: transparent;
+  color: white;
+  text-decoration: none;
+  text-align: center;
 }
 
-/* Style the menu toggle button */
+.nav-item a:hover {
+  background-color: #c851ce;
+}
+
 .menu-toggle {
   display: none;
   flex-direction: column;
@@ -48,41 +51,35 @@ body {
   cursor: pointer;
 }
 
-/* Style each bar of the menu toggle button */
 .bar {
   background-color: white;
   height: 3px;
   width: 25px;
 }
 
-/* Responsive design */
+
 @media (max-width: 768px) {
-  /* Show the menu toggle button */
   .menu-toggle {
     display: flex;
     margin-right: 20px;
   }
 
-  /* Hide the navigation menu */
   .nav-list {
     display: none;
     flex-direction: column;
     width: 100%;
-    text-align: center;
     position: absolute;
     top: 60px;
-    left: 0;
     background-color: #333;
+    padding: 0;;
+    align-items: center;     
   }
 
-  /* Show the navigation menu when it's active */
   .nav-list.active {
     display: flex;
   }
 
-  /* Style each navigation item */
   .nav-item {
-    margin-left: 0;
-    margin-bottom: 1px;
+    padding: 10px 0;
   }
 }
