--- a/src/components/QuestionInput/QuestionInput.css
+++ b/src/components/QuestionInput/QuestionInput.css
@@ -1,39 +1,45 @@
 .input-container {
   display: flex;
   position: fixed;
-  top: 50%;
+  bottom: 20px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 40vw;
+  transform: translateX(-50%);
+  width: 80vw;
   max-width: 800px;
   padding: 0.5vw;
   background-color: #f2f2f2;
   border-radius: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .input-container input {
   margin-right: 10px;
-  background-color: #f2f2f2;
   flex-grow: 1;
   border: none;
-  font-size: 2vw;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 24px;
 }
 
 .input-container button {
-  flex-shrink: 0;
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .input-container input::placeholder {
   color: gray;
-  font-size: 2vw;
 }
 
 .input-container input:focus {
   outline: none;
-}
-
-.input-container button {
-  flex-shrink: 0;
 }
 
 @media (max-width: 600px) {
@@ -42,7 +48,9 @@
     padding: 0.5vw;
   }
 
-  .input-container input {
-    font-size: 2vw;
+  .input-container input,
+  .input-container button {
+    font-size: 24px;
+    padding: 10px;
   }
 }
