--- a/src/sections/Navbar/Navbar.css
+++ b/src/sections/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -20,7 +19,6 @@
   display: flex;
 }
 
-
 .nav-item {
   margin-left: 20px;
 }
@@ -31,7 +29,7 @@
   margin-top: 10px;
   display: block;
   width: 100px;
-  border-radius: 10px;   
+  border-radius: 10px;
   border: 2px dashed #df73e7;
   background-color: transparent;
   color: white;
@@ -57,7 +55,6 @@
   width: 25px;
 }
 
-
 @media (max-width: 768px) {
   .menu-toggle {
     display: flex;
@@ -71,8 +68,8 @@
     position: absolute;
     top: 60px;
     background-color: #333;
-    padding: 0;;
-    align-items: center;     
+    padding: 0;
+    align-items: center;
   }
 
   .nav-list.active {
