--- a/src/components/YouTubeCarousel/VideoCarousel.css
+++ b/src/components/YouTubeCarousel/VideoCarousel.css
@@ -1,20 +1,51 @@
 .carousel-video {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 2rem;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.react-player-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  height: 0;
 }
 
 .react-player {
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.react-multiple-carousel__arrow--left {
-  left: calc(20% + 1px);
-  height: 50px;
-  width: 50px;
-}
+/* Custom arrow styling */
+.react-multiple-carousel__arrow--left,
 .react-multiple-carousel__arrow--right {
-  right: calc(20% + 1px);
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
+}
+
+@media (max-width: 1024px) {
+  .carousel-video {
+    padding: 1.5rem;
+  }
+
+  .react-multiple-carousel__arrow--left,
+  .react-multiple-carousel__arrow--right {
+    height: 30px;
+    width: 30px;
+  }
+}
+
+@media (max-width: 464px) {
+  .carousel-video {
+    padding: 1rem;
+  }
+
+  .react-multiple-carousel__arrow--left,
+  .react-multiple-carousel__arrow--right {
+    height: 25px;
+    width: 25px;
+  }
 }
