--- a/src/components/Logout/Logout.css
+++ b/src/components/Logout/Logout.css
@@ -1,7 +1,7 @@
 .logout-button {
   margin-right: 20px;
   padding: 8px 16px;
-  background-color: #e57373;
+  background-color: gray;
   color: white;
   border: none;
   border-radius: 4px;
@@ -9,5 +9,5 @@
 }
 
 .logout-button:hover {
-  background-color: #c62828;
+  background-color: darkgray;
 }
