--- a/src/sections/ContactSection/ContactSection.css
+++ b/src/sections/ContactSection/ContactSection.css
@@ -67,6 +67,12 @@
   color: white;
 }
 
+.error-message {
+  color: red;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
   .contact-form,
