--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -5,9 +5,15 @@
   height: 100vh;
 }
 
+.auth-content {
+  display: flex;
+  align-items: center; /* For vertical alignment */
+  justify-content: center; /* For horizontal alignment */
+  width: 100%;
+}
+
 .auth-container {
   max-width: 400px;
-  width: 100%;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -16,6 +22,7 @@
 }
 
 .auth-tabs {
+  justify-content: center;
   display: flex;
   margin-bottom: 20px;
 }
@@ -48,7 +55,7 @@
 .auth-form button {
   width: 100%;
   padding: 10px;
-  background-color: #df73e7;
+  background-color: #2A3B8D;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -58,12 +65,61 @@
 }
 
 .auth-form button:hover {
-  background-color: #c851ce;
+  background-color: #1A2B5D;
+}
+
+.auth-image {
+  width: 400px;
+  height: 400px;
+  margin-right: 30px; 
+}
+
+.tab-container {
+  display: flex;
+  border-bottom: 2px solid #e0e0e0; /* Gives a subtle underline for the tabs */
+}
+
+.tab {
+  margin-right: 10px;
+  font-size: 18px;
+  color: black;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.tab:last-child {
+  margin-right: 0; /* Ensures the last tab doesn't have unnecessary right margin */
+}
+
+.tab:hover {
+  background-color: #f1f1f1; /* Adds a hover effect to the non-active tab */
+}
+
+.tab.active {
+  border-bottom: 3px solid #EE136F; /* Gives a noticeable underline for the active tab */
+  background-color: #fdfdfd;
+}
+
+.auth-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;  /* You can adjust this color to fit your branding */
 }
 
 /* Media Query for smaller screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
+  .auth-content {
+    flex-direction: column;
+  }
+
   .auth-container {
-    box-sizing: border-box;
+    margin: 40px;
+  }
+
+  .auth-image {
+    height: auto;
+    max-width: 100%; 
+    margin-right: 0; 
   }
 }
