--- a/src/components/BlogList/BlogList.css
+++ b/src/components/BlogList/BlogList.css
@@ -26,6 +26,25 @@
   background-color: #555;
 }
 
+.create-new-article-btn {
+  position: fixed; /* This makes the button fixed to a position */
+  bottom: 20px;    /* 20px from the bottom */
+  right: 20px;     /* 20px from the right side */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  z-index: 1000;  /* High value to ensure it's above other elements */
+}
+
+.create-new-article-btn:hover {
+  background-color: #555;
+}
+
+
 @media (max-width: 768px) {
   .blog-list {
     grid-template-columns: 1fr;
